# beam-native-streaming-poc

./: README.md  pyproject.toml
docs/: beam-integration.md
examples/: unbounded_source_example.py  watch_growth_example.py
src/beam_streaming_poc/: __init__.py
src/beam_streaming_poc/unbounded_source/: __init__.py  empty_source.py  restriction.py  tracker.py  wrapper.py
src/beam_streaming_poc/watch/: __init__.py  growth_fn.py  growth_state.py  poll.py  termination.py
tests/: test_unbounded_source.py  test_watch.py
