[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beam-native-streaming-poc"
version = "0.1.0"
description = "PoC: Native Streaming Transforms for the Apache Beam Python SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Elia", email = "elialiulzy@gmail.com" },
]
dependencies = [
  "apache-beam~=2.71.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-timeout>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beam_streaming_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "*Test"
python_functions = "test_*"

[tool.uv]
dev-dependencies = [
  "pytest>=7.0",
  "pytest-timeout>=2.0",
]
